---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF013_0.py:21:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
21 | def f(arg: int = None):  # RUF013
   |            ^^^ RUF013
22 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
18 18 |     pass
19 19 | 
20 20 | 
21    |-def f(arg: int = None):  # RUF013
   21 |+def f(arg: Optional[int] = None):  # RUF013
22 22 |     pass
23 23 | 
24 24 | 

RUF013_0.py:25:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
25 | def f(arg: str = None):  # RUF013
   |            ^^^ RUF013
26 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
22 22 |     pass
23 23 | 
24 24 | 
25    |-def f(arg: str = None):  # RUF013
   25 |+def f(arg: Optional[str] = None):  # RUF013
26 26 |     pass
27 27 | 
28 28 | 

RUF013_0.py:29:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
29 | def f(arg: typing.List[str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^ RUF013
30 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
26 26 |     pass
27 27 | 
28 28 | 
29    |-def f(arg: typing.List[str] = None):  # RUF013
   29 |+def f(arg: Optional[typing.List[str]] = None):  # RUF013
30 30 |     pass
31 31 | 
32 32 | 

RUF013_0.py:33:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
33 | def f(arg: Tuple[str] = None):  # RUF013
   |            ^^^^^^^^^^ RUF013
34 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
30 30 |     pass
31 31 | 
32 32 | 
33    |-def f(arg: Tuple[str] = None):  # RUF013
   33 |+def f(arg: Optional[Tuple[str]] = None):  # RUF013
34 34 |     pass
35 35 | 
36 36 | 

RUF013_0.py:71:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
71 | def f(arg: Union = None):  # RUF013
   |            ^^^^^ RUF013
72 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
68 68 |     pass
69 69 | 
70 70 | 
71    |-def f(arg: Union = None):  # RUF013
   71 |+def f(arg: Optional[Union] = None):  # RUF013
72 72 |     pass
73 73 | 
74 74 | 

RUF013_0.py:75:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
75 | def f(arg: Union[int] = None):  # RUF013
   |            ^^^^^^^^^^ RUF013
76 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
72 72 |     pass
73 73 | 
74 74 | 
75    |-def f(arg: Union[int] = None):  # RUF013
   75 |+def f(arg: Optional[Union[int]] = None):  # RUF013
76 76 |     pass
77 77 | 
78 78 | 

RUF013_0.py:79:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
79 | def f(arg: Union[int, str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^ RUF013
80 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
76 76 |     pass
77 77 | 
78 78 | 
79    |-def f(arg: Union[int, str] = None):  # RUF013
   79 |+def f(arg: Optional[Union[int, str]] = None):  # RUF013
80 80 |     pass
81 81 | 
82 82 | 

RUF013_0.py:83:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
83 | def f(arg: typing.Union[int, str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^^^^^^^ RUF013
84 |     pass
   |
   = help: Convert to `Optional[T]`

ℹ Suggested fix
80 80 |     pass
81 81 | 
82 82 | 
83    |-def f(arg: typing.Union[int, str] = None):  # RUF013
   83 |+def f(arg: Optional[typing.Union[int, str]] = None):  # RUF013
84 84 |     pass
85 85 | 
86 86 | 

RUF013_0.py:102:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
102 | def f(arg: int | float = None):  # RUF013
    |            ^^^^^^^^^^^ RUF013
103 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
99  99  |     pass
100 100 | 
101 101 | 
102     |-def f(arg: int | float = None):  # RUF013
    102 |+def f(arg: Optional[int | float] = None):  # RUF013
103 103 |     pass
104 104 | 
105 105 | 

RUF013_0.py:106:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
106 | def f(arg: int | float | str | bytes = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^ RUF013
107 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
103 103 |     pass
104 104 | 
105 105 | 
106     |-def f(arg: int | float | str | bytes = None):  # RUF013
    106 |+def f(arg: Optional[int | float | str | bytes] = None):  # RUF013
107 107 |     pass
108 108 | 
109 109 | 

RUF013_0.py:125:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
125 | def f(arg: Literal[1] = None):  # RUF013
    |            ^^^^^^^^^^ RUF013
126 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
122 122 |     pass
123 123 | 
124 124 | 
125     |-def f(arg: Literal[1] = None):  # RUF013
    125 |+def f(arg: Optional[Literal[1]] = None):  # RUF013
126 126 |     pass
127 127 | 
128 128 | 

RUF013_0.py:129:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
129 | def f(arg: Literal[1, "foo"] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^ RUF013
130 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
126 126 |     pass
127 127 | 
128 128 | 
129     |-def f(arg: Literal[1, "foo"] = None):  # RUF013
    129 |+def f(arg: Optional[Literal[1, "foo"]] = None):  # RUF013
130 130 |     pass
131 131 | 
132 132 | 

RUF013_0.py:133:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
133 | def f(arg: typing.Literal[1, "foo", True] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF013
134 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
130 130 |     pass
131 131 | 
132 132 | 
133     |-def f(arg: typing.Literal[1, "foo", True] = None):  # RUF013
    133 |+def f(arg: Optional[typing.Literal[1, "foo", True]] = None):  # RUF013
134 134 |     pass
135 135 | 
136 136 | 

RUF013_0.py:152:22: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
152 | def f(arg: Annotated[int, ...] = None):  # RUF013
    |                      ^^^ RUF013
153 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
149 149 |     pass
150 150 | 
151 151 | 
152     |-def f(arg: Annotated[int, ...] = None):  # RUF013
    152 |+def f(arg: Annotated[Optional[int], ...] = None):  # RUF013
153 153 |     pass
154 154 | 
155 155 | 

RUF013_0.py:156:32: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
156 | def f(arg: Annotated[Annotated[int | str, ...], ...] = None):  # RUF013
    |                                ^^^^^^^^^ RUF013
157 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
153 153 |     pass
154 154 | 
155 155 | 
156     |-def f(arg: Annotated[Annotated[int | str, ...], ...] = None):  # RUF013
    156 |+def f(arg: Annotated[Annotated[Optional[int | str], ...], ...] = None):  # RUF013
157 157 |     pass
158 158 | 
159 159 | 

RUF013_0.py:172:11: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
171 | def f(
172 |     arg1: int = None,  # RUF013
    |           ^^^ RUF013
173 |     arg2: Union[int, float] = None,  # RUF013
174 |     arg3: Literal[1, 2, 3] = None,  # RUF013
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
169 169 | 
170 170 | 
171 171 | def f(
172     |-    arg1: int = None,  # RUF013
    172 |+    arg1: Optional[int] = None,  # RUF013
173 173 |     arg2: Union[int, float] = None,  # RUF013
174 174 |     arg3: Literal[1, 2, 3] = None,  # RUF013
175 175 | ):

RUF013_0.py:173:11: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
171 | def f(
172 |     arg1: int = None,  # RUF013
173 |     arg2: Union[int, float] = None,  # RUF013
    |           ^^^^^^^^^^^^^^^^^ RUF013
174 |     arg3: Literal[1, 2, 3] = None,  # RUF013
175 | ):
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
170 170 | 
171 171 | def f(
172 172 |     arg1: int = None,  # RUF013
173     |-    arg2: Union[int, float] = None,  # RUF013
    173 |+    arg2: Optional[Union[int, float]] = None,  # RUF013
174 174 |     arg3: Literal[1, 2, 3] = None,  # RUF013
175 175 | ):
176 176 |     pass

RUF013_0.py:174:11: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
172 |     arg1: int = None,  # RUF013
173 |     arg2: Union[int, float] = None,  # RUF013
174 |     arg3: Literal[1, 2, 3] = None,  # RUF013
    |           ^^^^^^^^^^^^^^^^ RUF013
175 | ):
176 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
171 171 | def f(
172 172 |     arg1: int = None,  # RUF013
173 173 |     arg2: Union[int, float] = None,  # RUF013
174     |-    arg3: Literal[1, 2, 3] = None,  # RUF013
    174 |+    arg3: Optional[Literal[1, 2, 3]] = None,  # RUF013
175 175 | ):
176 176 |     pass
177 177 | 

RUF013_0.py:202:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
202 | def f(arg: Union[Annotated[int, ...], Union[str, bytes]] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF013
203 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
199 199 |     pass
200 200 | 
201 201 | 
202     |-def f(arg: Union[Annotated[int, ...], Union[str, bytes]] = None):  # RUF013
    202 |+def f(arg: Optional[Union[Annotated[int, ...], Union[str, bytes]]] = None):  # RUF013
203 203 |     pass
204 204 | 
205 205 | 

RUF013_0.py:209:13: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
209 | def f(arg: "int" = None):  # RUF013
    |             ^^^ RUF013
210 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
206 206 | # Quoted
207 207 | 
208 208 | 
209     |-def f(arg: "int" = None):  # RUF013
    209 |+def f(arg: "Optional[int]" = None):  # RUF013
210 210 |     pass
211 211 | 
212 212 | 

RUF013_0.py:213:13: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
213 | def f(arg: "str" = None):  # RUF013
    |             ^^^ RUF013
214 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
210 210 |     pass
211 211 | 
212 212 | 
213     |-def f(arg: "str" = None):  # RUF013
    213 |+def f(arg: "Optional[str]" = None):  # RUF013
214 214 |     pass
215 215 | 
216 216 | 

RUF013_0.py:217:12: RUF013 PEP 484 prohibits implicit `Optional`
    |
217 | def f(arg: "st" "r" = None):  # RUF013
    |            ^^^^^^^^ RUF013
218 |     pass
    |
    = help: Convert to `Optional[T]`

RUF013_0.py:225:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
225 | def f(arg: Union["int", "str"] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^^^ RUF013
226 |     pass
    |
    = help: Convert to `Optional[T]`

ℹ Suggested fix
222 222 |     pass
223 223 | 
224 224 | 
225     |-def f(arg: Union["int", "str"] = None):  # RUF013
    225 |+def f(arg: Optional[Union["int", "str"]] = None):  # RUF013
226 226 |     pass
227 227 | 
228 228 | 


